# Shortwave-MPRIS

./: .SRCINFO  .deny.toml  .gitignore  .gitlab-ci.yml  Cargo.toml  PKGBUILD  README.md  RELEASE_NOTES_v5.1.0.md  Shortwave.code-workspace  debug_shortwave_install.sh  deny.toml  meson.build  shortwave-mpris.md
build-aux/: checks.sh  de.haeckerfelix.Shortwave.Devel.json
data/: de.haeckerfelix.Shortwave.gresource.xml.in  de.haeckerfelix.Shortwave.gschema.xml.in  de.haeckerfelix.Shortwave.metainfo.xml.in.in  meson.build
data/gtk/: add_station_dialog.ui  create_station_dialog.ui  device_dialog.ui  device_indicator.ui  discover_page.ui  favicon.ui  featured_carousel.ui  featured_carousel_page.ui  help_overlay.ui  library_page.ui  mini_controller.ui  player.ui  player_gadget.ui  player_toolbar.ui  player_view.ui  preferences_dialog.ui  recording_indicator.ui  search_page.ui  settings_window.ui  sidebar_controller.ui  song_listbox.ui  song_row.ui  station_cover.ui  station_dialog.ui  station_favicon.ui  station_flowbox.ui  station_row.ui  streaming_dialog.ui  style-dark.css  style.css  toolbar_controller.ui  track_dialog.ui  track_row.ui  volume_control.ui  window.ui
local/share/: de.haeckerfelix.Shortwave.desktop  de.haeckerfelix.Shortwave.desktop.in  de.haeckerfelix.Shortwave.gresource.xml  de.haeckerfelix.Shortwave.gschema.xml  de.haeckerfelix.Shortwave.metainfo.xml  de.haeckerfelix.Shortwave.metainfo.xml.in  de.haeckerfelix.Shortwave.service
patches/smol-timeout/: Cargo.toml
po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  da.po  de.po  es.po  eu.po  fa.po  fi.po  fr.po  he.po  hi.po  hu.po  ia.po  id.po  is.po  ka.po  oc.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
src/: app.rs  main.rs  meson.build  path.rs  utils.rs
src/api/: client.rs  cover_loader.rs  error.rs  favicon_downloader.rs  http.rs  mod.rs  station.rs  station_metadata.rs  station_model.rs  station_sorter.rs
src/audio/: gcast_discoverer.rs  gstreamer_backend.rs  mod.rs  mpris.rs  player.rs  player2.rs  recording_state.rs  song.rs  song_model.rs  song_state.rs  track.rs  track_model.rs  track_state.rs
src/database/: connection.rs  library.rs  models.rs
src/device/: cast_sender.rs  device.rs  device_discovery.rs  device_kind.rs  dlna_sender.rs  ffmpeg_wrapper.rs  mod.rs
src/model/: mod.rs  song_model.rs  station_model.rs
src/settings/: key.rs  mod.rs  settings_dialog.rs  (+2 more)
(+44 files in other folders)
