[package]
name = "shortwave"
version = "0.0.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
async-channel = "2.3"
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4"
rust_cast = "0.19"
mdns = "3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.7"
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }
indexmap = "2.2"
strum = "0.26"
strum_macros = "0.26"
diesel_migrations = "2.1"
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
futures-io = "0.3"
futures-util = "0.3"
async-std = "1.12"
isahc = { version = "1.7", features = ["json"] }
regex = "1.10"
thiserror = "1.0"
async-std-resolver = "0.24"
once_cell = "1.19"
rand = "0.8"
sanitize-filename = "0.5"
Inflector = "0.11"

gstreamer-audio = { version = "0.22" }
gstreamer = { version = "0.22"}
shumate = { version = "0.5", package = "libshumate"}
gettext-rs = { version = "0.7", features = ["gettext-system"] }
adw = { version = "0.6", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.8", package = "gtk4", features = ["gnome_46"] }
gtk-macros = "0.3"

[target.'cfg(unix)'.dependencies]
mpris-player = "0.6"
