[package]
name = "shortwave"
version = "0.0.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
async-channel = "2.3"
async-io = "2.3"
async-std-resolver = "0.24"
cast-sender = "0.2"
diesel = { version = "2.2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1"
futures-lite = "2.3"
indexmap = "2.2"
Inflector = "0.11"
isahc = { version = "1.7", features = ["json"] }
log = "0.4"
mdns-sd = "0.11"
mpris-server = "0.8"
pretty_env_logger = "0.5"
rand = "0.8"
regex = "1.10"
sanitize-filename = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }

gstreamer-audio = { version = "0.23" }
gstreamer = { version = "0.23"}
shumate = { version = "0.6", package = "libshumate"}
gettext-rs = { version = "0.7", features = ["gettext-system"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_46"] }